2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S [NEED_CANCELLATION &&
	CENABLE]: Don't lose content of %ebx.

2002-12-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Use SINGLE_THREAD_P
	macro instead of comparing %gs:MULTIPLE_THREADS_OFFSET directly.

2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): If __nss_lookup_function
	fails to return a function pointer don't use it.

2002-12-16  Art Haas  <ahaas@airmail.net>

	* io/ftw.c: Convert GCC extension initializer syntax to C99.
	* iconvdata/iso-ir-165.c: Likewise.
	* iconvdata/jis0208.c: Likewise.
	* iconvdata/jis0212.c: Likewise.

2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/syscalls.list: Add epoll_create,
	epoll_ctl, and epoll_wait.
	* sysdeps/unix/sysv/linux/Versions [libc: GLIBC_2.3.2]: Add
	epoll_create, epoll_ctl, and epoll_wait.
	* sysdeps/unix/sysv/linux/sys/epoll.h: New file.  Written by
	Davide Libenzi <davidel@xmailserver.org>.
	* sysdeps/unix/sysv/linux/Dist: Add sys/epoll.h.
	* sysdeps/unix/sysv/linux/Makefile [subdir=misc] (sysdep_headers):
	Add sys/epoll.h.

2002-12-16  Art Haas  <ahaas@airmail.net>

	* sysdeps/generic/bp-semctl.h: Convert GCC extension initializer
	syntax to C99
	* sysdeps/unix/sysv/aix/settimer.c: Likewise.
	* sysdeps/unix/sysv/aix/sleep.c: Likewise.
	* sysdeps/unix/sysv/aix/usleep.c: Likewise.

2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/Makefile (routines): Remove lockfile.  Add
	flockfile, ftrylockfile, and funlockfile.
	* sysdeps/generic/lockfile.c: Removed.  Each function has its own file.
	* sysdeps/generic/flockfile.c: New file.
	* sysdeps/generic/ftrylockfile.c: New file.
	* sysdeps/generic/funlockfile.c: New file.

2002-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Use CENABLE and CDISABLE
	macros instead of doing the calls directly.